Update: removed horizontal scrolling & fixed the html structure

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,7 @@ body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     color: #333;
+    width: 100%;
 }
 
 /* Header Section */
@@ -52,7 +53,8 @@ footer {
 
 #page1,
 #page2,
-#page3 {
+#page3,
+#landing-page {
     border: 2px solid black;
     margin: 4rem;
     padding: 2rem;
